@@ -30,6 +30,7 @@ public class ExampleDriver {
       pgd.addClass("sssp", ShortestPaths.class, "Single Shortest Path");
       pgd.addClass("cmb", CombineExample.class, "Combine");
       pgd.addClass("bench", RandBench.class, "Random Benchmark");
+      pgd.addClass("pagerank", PageRank.class, "PageRank");
       pgd.driver(args);
     } catch (Throwable e) {
       e.printStackTrace();
