@@ -199,7 +199,7 @@ public class ShortestPaths extends
   }
 
   public static void printUsage() {
-    System.out.println("Usage: <startNode> <output path> <input path> [numTasks]");
+    System.out.println("Usage: <startNode> <input path> <output path> [tasks]");
   }
 
   public static void main(String[] args) throws IOException,
@@ -218,8 +218,8 @@ public class ShortestPaths extends
     bsp.setJobName("Single Source Shortest Path");
 
     conf.set(START_VERTEX, args[0]);
-    bsp.setOutputPath(new Path(args[1]));
-    bsp.setInputPath(new Path(args[2]));
+    bsp.setInputPath(new Path(args[1]));
+    bsp.setOutputPath(new Path(args[2]));
 
     if(args.length == 4) {
       bsp.setNumBspTask(Integer.parseInt(args[3]));
